<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:layout_margin="5dp"
    android:clickable="true"
    android:foreground="?selectableItemBackground"
    app:cardBackgroundColor="@color/b1"
    app:cardElevation="3dp"
    app:contentPadding="4dp">
    <!--app:cardCornerRadius="12dp"-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <ImageView
            android:id="@+id/appIcon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/appName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/appIcon"
            android:text="TextView"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:textColorLink="@android:color/background_dark"
            tools:layout_editor_absoluteX="20dp" />

        <ImageView
            android:id="@+id/delete"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignBottom="@+id/appName"
            android:layout_alignParentEnd="true"
            app:srcCompat="@drawable/redtrash512" />

    </RelativeLayout>

</android.support.v7.widget.CardView>