...
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <Button
            android:id="@+id/partialScan"
            android:layout_width="245dp"
            android:layout_height="243dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/round_button"
            android:text="Partial Scan"
            android:textColor="@android:color/black"
...
